--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,8 @@
 <resources>
-    <string name="app_name">Firestore-Visualizer</string>
+    <string name="app_name">Firebase-Visualizer</string>
     <string name="title_activity_viewer">ViewerActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-    <string name="title">Firestore Visualizer</string>
-    <string name="firestore_logo_description">Firestore logo</string>
+    <string name="title">Firebase Visualizer</string>
+    <string name="firebase_logo_description">Firebase logo</string>
 </resources>
