--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">파이어베이스 뷰어</string>
+    <string name="app_name">KPU 출석관리 데이터베이스 관리</string>
     <string name="title_activity_viewer">ViewerActivity</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-    <string name="title">Firebase Visualizer</string>
+    <string name="title">Attman Manager</string>
     <string name="firebase_logo_description">Firebase logo</string>
     <string name="github_button_description">Github 레포지토리로 이동</string>
     <string name="viewer_button_description">Firebase DB 조회</string>
